elite-code/src/App.css
body {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
}

nav {
  background-color: #f8f9fa;
  padding: 10px;
}

nav ul {
  list-style-type: none;
  padding: 0;
}

nav ul li {
  display: inline;
  margin-right: 10px;
}

nav ul li a {
  text-decoration: none;
  color: #333;
}

h2 {
  color: #333;
}

table {
  width: 100%;
  margin-top: 20px;
  border-collapse: collapse;
}

table, th, td {
  border: 1px solid #ddd;
}

th, td {
  padding: 15px;
  text-align: left;
}

th {
  background-color: #f2f2f2;
}

tr:hover {background-color: #f5f5f5;}

.split {
  display: flex;
  height: 100vh;
}

.problem-section,
.editor-section {
  padding: 20px;
}

.gutter {
  background-color: #eee;
  background-repeat: no-repeat;
  background-position: 50%;
}
.gutter.gutter-horizontal {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVQYV2P4DwABAQEAG7buVgAAAABJRU5ErkJggg==');
  cursor: ew-resize;
}

.run-button {
  background-color: #1ab81f;
  border: none;
  color: rgb(240, 240, 240);
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  font-weight: bolder;
  margin: 4px 2px;
  transition-duration: 0.1s;
  cursor: pointer;
  border-radius: 7px;
  order: 2;
}

.run-button:hover {
  background-color: #009405;
  color: white;
}

textarea {
  width: 100%;
  padding: 40px;
  box-sizing: border-box;
  border: 2px solid #ccc;
  border-radius: 4px;
  background-color: #f8f8f8;
  font-size: 16px;
  resize: none;
  flex-grow: 1;
  margin-right: 10px;
}

.ace-editor {
  font-size: 18px !important;
}




.run-section {
  display: flex;
  justify-content: space-between;
  align-items: center;
}


.run-section button {
  order: 1;
  margin-bottom: 10px;
}



.case-button {
  border: 2px solid;
  background-color: transparent;
  color: grey;
  margin: 10px;
  padding: 10px;
  border-radius: 15px;
  font-size: 16px;
  font-weight: bold;
}


.case-button.passed {
  border-color: green;
}

.case-button.failed {
  border-color: red;
}

.case-button.selected {
  color: black;
}

.output-container {
  border: 1px solid #ccc;
  padding: 10px;
  margin: 10px 0;
  border-radius: 10px;
}

.case-detail-container {
  background-color: #f8f8f8;
  padding: 10px;
  border-radius: 10px;
}

.case-detail-container p {
  margin: 0;
}

